# medium-stack

./: .env.example  .gitignore  Dockerfile  NOTES.md  NOTES.txt  README.md  TODO.md  docker-build.sh  docker-compose.sh  docker-compose.yml  fasttest.py  pytest.ini
mbuilder/py/mbuilder/: pyproject.toml  requirements-dev.txt
mbuilder/py/mbuilder/src/mcore/: auth.py  client.py  db.py  errors.py  models.py  util.py
mbuilder/py/mbuilder/src/mserve/: __init__.py  core.py  uploads.py
mbuilder/py/mbuilder/src/mtemplate/: __init__.py  __main__.py
mbuilder/py/mbuilder/src/mtemplate/app/: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  web.sh
mbuilder/py/mbuilder/src/mtemplate/app/src/sample_app/: __init__.py  client.py  models.py  ops.py  serve.py
mbuilder/py/mbuilder/src/mtemplate/app/tests/: conftest.py
mbuilder/py/mbuilder/src/mtemplate/app/tests/sample_app/: test_client.py  test_db.py  test_models.py
mbuilder/py/mbuilder/tests/: README.md
mbuilder/py/mbuilder/tests/mcore/: test_models.py
medium-js/: README.md  index.html  package-lock.json  package.json
medium-js/src/: main.css  main.js
medium-stack/: dev.sh
medium-stack/mstack/: pyproject.toml
medium-stack/scripts/: seeder.py
medium-stack/tests/: conftest.py
medium-templates/mtemplate/: __init__.py  __main__.py  pyproject.toml
medium-templates/mtemplate/src/mtemplate/: __init__.py  __main__.py
medium-templates/output/: client.py  sdk.py
medium-templates/py/: client.py  sdk.py
mstack/mart/: mtemplate.conf  (+2 more)
my_project/: mtemplate.conf
scripts/: seeder.py
(+92 files in other folders)
