[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'medium-stack-templater'
version = '0.0.1'
authors = [
  { name='Brad Corlett', email='brad.corlett@gmail.com' },
]
description = 'The medium tech stack templater'
requires-python = '>=3.7'
dependencies = [
    'Jinja2'
]
